--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.galleryapp">
 
+
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/gallery"
@@ -49,7 +51,11 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:required="true" />
+    <uses-feature android:name="android.hardware.camera"
+            android:required="true"/>
     <uses-permission
-        android:name="android.permission.CAMERA"
-        android:required="true"/>
+        android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+
+
 </manifest>
